--- a/todo.txt
+++ b/todo.txt
@@ -12,7 +12,7 @@ X window should be modal
 X action should be in the "View" menu
 - persist the recent files so when netbeans is re-opened there will be a recent file list
 - give the user the ability to set the number of recent files to track (default 10)
-- should be enabled only when there are recent files
+X should be enabled only when there are recent files
 X press "Enter" to open the file in an editor, or make the editor active
 X automatically grab the files that are currently open
 - make the current file label show what project the file is in instead of path if the same filename is already in the list (ex. pom.xml)
