--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,6 @@ X action should be in the "View" menu
 X should be enabled only when there are recent files
 X press "Enter" to open the file in an editor, or make the editor active
 X automatically grab the files that are currently open
-- make the current file label show what project the file is in instead of path if the same filename is already in the list (ex. pom.xml)
+X make the current file label show what project the file is in instead of path if the same filename is already in the list (ex. pom.xml)
 X set minimum size on the dialog window so the whole title will always be seen
 - wrap scrolling with the pressing of the keyboard
